2024.1/rv32i_pp_ip/hls_component/rv32i_pp_ip/logs/hls_run_csim_250641.backup.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/rv32i_pp_ip/rv32i_pp_ip.hlsrun_csim_summary, at Sun Sep  8 16:10:38 2024
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/rv32i_pp_ip -config /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg -cmdlineconfig /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/rv32i_pp_ip/hls/config.cmdline

****** Vitis HLS - High-Level Synthesis from C, C++ and OpenCL v2024.1 (64-bit)
  **** SW Build 5069499 on May 21 2024
  **** IP Build 5075265 on Wed May 22 21:45:21 MDT 2024
  **** SharedData Build 5076995 on Wed May 22 18:29:18 MDT 2024
  **** Start of session at: Sun Sep  8 16:10:39 2024
    ** Copyright 1986-2022 Xilinx, Inc. All Rights Reserved.
    ** Copyright 2022-2024 Advanced Micro Devices, Inc. All Rights Reserved.

source /opt/Xilinx/Vitis_HLS/2024.1/scripts/vitis_hls/hls.tcl -notrace
INFO: [HLS 200-10] For user 'goossens' on host 'goossens-Precision-5530' (Linux_x86_64 version 6.8.0-40-generic) on Sun Sep 08 16:10:41 CEST 2024
INFO: [HLS 200-10] On os Ubuntu 22.04.4 LTS
INFO: [HLS 200-10] In directory '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component'
INFO: [HLS 200-2005] Using work_dir /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/rv32i_pp_ip 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/wb.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(6)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/wb.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/type.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/type.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/rv32i_pp_ip.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(8)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/rv32i_pp_ip.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/print.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/print.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/mem.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/mem.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/immediate.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/immediate.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/fetch_decode.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/fetch_decode.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/fetch.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(13)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/fetch.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/execute.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(14)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/execute.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/emulate.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(15)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/emulate.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/disassemble.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(16)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/disassemble.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/decode.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(17)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/decode.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/compute.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(18)
INFO: [HLS 200-10] Adding design file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/compute.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/testbench_rv32i_pp_ip.cpp' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(23)
INFO: [HLS 200-10] Adding test bench file '/home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/testbench_rv32i_pp_ip.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=rv32i_pp_ip' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(19)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(5)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z020clg400-1' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-1'
INFO: [HLS 200-1465] Applying ini 'clock=10ns' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(4)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(20)
INFO: [HLS 200-1465] Applying ini 'vivado.rtl=verilog' from /home/goossens/goossens-book-ip-projects/2024.1/rv32i_pp_ip/workspace/hls_component/hls_config.cfg(21)
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch CLANG as the compiler.
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../../../testbench_rv32i_pp_ip.cpp in debug mode
../../../../../../testbench_rv32i_pp_ip.cpp:11:3: error: no matching function for call to 'rv32i_pp_ip'
  rv32i_pp_ip(0, code_ram, data_ram, &nbi, &nbc);
  ^~~~~~~~~~~
../../../../../../rv32i_pp_ip.h:190:6: note: candidate function not viable: no known conversion from 'unsigned long *' to 'unsigned int *' for 4th argument
void rv32i_pp_ip(
     ^
1 error generated.
make: *** [csim.mk:88: obj/testbench_rv32i_pp_ip.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: 4
INFO: [HLS 200-112] Total CPU user time: 4.91 seconds. Total CPU system time: 0.52 seconds. Total elapsed time: 5.26 seconds; peak allocated memory: 340.102 MB.
